--- a/HW1/code/HW1.Rmd
+++ b/HW1/code/HW1.Rmd
@@ -15,6 +15,9 @@ output:
     number_sections: TRUE
 ---
 
+> - [HW2.html](../../HW2/code/HW2.html)
+> - [Homework1.html](../../HW1/code/Homework1.html)
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 ```
